alfa version of bot. add base, finance operations, database operations.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
 pytz
-requests
 python-dotenv
-click==7.1.2
+click==7.0
 
 # Django
 django
 django-cleanup==5.2.0
-django-timezone-field 
+django-timezone-field
 django-cors-headers
 pillow==8.2.0
 whitenoise
@@ -14,7 +13,6 @@ whitenoise
 # Django 3.0 async requirements
 gunicorn==20.1.0
 uvicorn
-uvloop
 httptools
 
 # Databases
@@ -27,8 +25,13 @@ redis
 django-celery-beat
 
 # Telegram
-python-telegram-bot
+python-telegram-bot==13.7
 python-telegram-bot-pagination==0.0.2
 
 # monitoring
 # sentry-sdk
+
+# parsing
+lxml==4.6.3
+requests==2.25.1
+beautifulsoup4==4.9.3
